--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
         <a href="objetsenjs.html">Jeu objets en JS</a><br>
         <a href="totalrecall.html">Jeu totalRecall</a><br>
         <a href="jsclicker.php">Jeu javascript clicker</a><br>
-        <a href="paires.php">Jeu trouve les paires</a> (A finir)<br>
+        <a href="paires.php">Jeu trouve les paires</a><br>
         <a href="apiajax.php">Web Service</a><br><br>
         <a href="https://github.com/TheDoudou/javascript">Repo GitHub</a><br>
     </body>
